// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Related publications Component  should not render data with empty lookups 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-"
      id="standard-card-"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card--header"
            id="standard-card--header"
          />
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card--content"
        data-testid="standard-card--content"
        id="standard-card--content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render component 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-title"
      id="standard-card-title"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-title-header"
            id="standard-card-title-header"
          >
            Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-title-content"
        data-testid="standard-card-title-content"
        id="standard-card-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render with a publication title 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-a-test-title"
      id="standard-card-a-test-title"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-a-test-title-header"
            id="standard-card-a-test-title-header"
          >
            A test Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-a-test-title-content"
        data-testid="standard-card-a-test-title-content"
        id="standard-card-a-test-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="undefined-current"
            >
              Data collection mock testing record
              <b>
                 (Current Record)
              </b>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render without a child search key 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-title"
      id="standard-card-title"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-title-header"
            id="standard-card-title-header"
          >
            Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-title-content"
        data-testid="standard-card-title-content"
        id="standard-card-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-0"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                Toxicity characterization of urban stormwater with bioanalytical tools
              </a>
            </p>
          </li>
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-has-related-datasets-1"
            >
              <a
                data-discover="true"
                href="/view/UQ:313292"
              >
                dataset 2
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related publications Component  should render without a parent search key 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-16fnxy3-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
      data-testid="standard-card-title"
      id="standard-card-title"
    >
      <div
        class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
            data-testid="standard-card-title-header"
            id="standard-card-title-header"
          >
            Title
          </h3>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        data-analyticsid="standard-card-title-content"
        data-testid="standard-card-title-content"
        id="standard-card-title-content"
      >
        <ul
          class="publicationList MuiBox-root css-dpoqzr"
        >
          <li>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1omq3q2-MuiTypography-root"
              data-testid="rek-isderivationof-0"
            >
              <a
                data-discover="true"
                href="/view/UQ:390658"
              >
                Landscape of somatic mutations in 560 breast cancer whole-genome sequences
              </a>
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
